# python-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
src/python_template/: __init__.py  main.py
tests/: test_main.py
